<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="500dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/footer2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Punteggio: "
        android:textSize="20dp"
        android:fontFamily="@font/armata"
        android:textStyle="bold"/>

    <RadioGroup
        android:id="@+id/addScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/add1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/add2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/add3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/add4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/add5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <EditText
        android:id="@+id/addDescription"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:hint="Inserisci descrizione"/>

    <Button
        android:id="@+id/okReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="OK"/>

    <Button
        android:id="@+id/annullaReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="Annulla"/>

    <ImageView
        android:layout_width="500dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/footer2" />


</LinearLayout>